Updated all test files to have the v1 route. Also made a function which allows users to change from standard to pro if they want to
